# KansoMIDI

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ini  imgui.ini
src/: audio.rs  main.rs  midi.rs  rendering.rs  settings.rs  util.rs  wavout.rs
src/audio/: prerender_audio.rs
src/midi/: buffered_byte_reader.rs  byte_reader.rs  midi_file.rs  midi_track_parser.rs
src/rendering/: buffers.rs  renderer.rs  shader.rs  window.rs
src/rendering/shaders/: b_fragment.glsl  b_vertex.glsl  k_fragment.glsl  k_vertex.glsl  n_fragment.glsl  n_vertex.glsl
src/settings/: advanced_settings.rs  audio_settings.rs  config.rs  player_settings.rs  visual_settings.rs
src/util/: color_funcs.rs  color_palettes.rs  global_timer.rs  iter_ext.rs  misc.rs
src/wavout/: wav_file.rs
