patch = { crates-io = { rustysynth = { path = "/Users/s135855/.rhack/rustysynth-1.3.2" } } }
[package]
name = "MIDIRust"
version = "0.1.0"
edition = "2021"

[dependencies]
"rayon" = "1.10.0"
"num-traits" = "0.2.19"
"rustysynth" = { path = "/Users/s135855/.rhack/rustysynth-1.3.2" }
"cpal" = "0.15.3"
"itertools" = "0.13.0"
glutin = "0.29.1"
gl = "0.14.0"
"xsynth-core" = "0.3.1"
"imgui" = "0.11.0"
"imgui-winit-support" = "0.11.0"
"imgui-opengl-renderer" = "0.12.1"
"rand" = "0.8.5"
"winit" = "0.30.5"
"image" = "0.25.5"
"rfd" = "0.15.1"
"configparser" = "3.1.0"

[rust]
debug = true